[gd_scene load_steps=4 format=3 uid="uid://bo44ka2gw65ue"]

[ext_resource type="Script" path="res://scenes/scripts/lights_out_minigame.gd" id="1_klj52"]
[ext_resource type="Texture2D" uid="uid://2xgd0eg6pvil" path="res://graphics/wiring/red_wire.png" id="2_b0o1f"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b1hkm"]
b = Vector2(81.5, 42)

[node name="LightsOutMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_klj52")

[node name="red_wire" type="Line2D" parent="."]
unique_name_in_owner = true
position = Vector2(4, 0)
points = PackedVector2Array(0, 0, 163, 84)
width = 5.0
texture = ExtResource("2_b0o1f")
texture_mode = 1

[node name="Area2D" type="Area2D" parent="red_wire"]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="red_wire/Area2D"]
shape = SubResource("SegmentShape2D_b1hkm")

[connection signal="mouse_entered" from="red_wire/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="red_wire/Area2D" to="." method="_on_area_2d_mouse_exited"]
